# yalama

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md  yalama_config.json
docker/build-linux/: Dockerfile.linux
docker/build-wsl/: Dockerfile.wsl
include/: AttentionCalculationResult.h  ChatSession.h  ChatTemplateProvider.h  ConfigManager.h  Constants.h  GenerationError.h  GenerationResult.h  Helpers.h  IChatTemplateProvider.h  LlamaChatTemplateProvider.h  LlamaInstructChatTemplateProvider.h  Model.h  RuntimeEnvironment.h  Tokenizer.h  TorchChecker.h  TraceLogger.h  safetensors.h
include/chat_templates/: ChatTemplateProvider.h  IChatTemplateProvider.h  LlamaChatTemplateProvider.h  LlamaInstructChatTemplateProvider.h  MistralChatTemplateProvider.h  Qwen2_5ChatTemplateProvider.h  Qwen3ChatTemplateProvider.h  QwenChatTemplateProvider.h
include/enums/: GenerationError.h  ModelType.h  WeightType.h
include/models/: LlamaModel.h  MistralModel.h  Model.h  ModelBase.h  ModelType.h  Qwen2_5Model.h  Qwen3Model.h  QwenModel.h
include/tokenizer/: LlamaTokenizer.h  MistralTokenizer.h  QwenTokenizer.h  Tokenizer.h  TokenizerBase.h
src/: ChatSession.cpp  ConfigManager.cpp  Model.cpp  Tokenizer.cpp  main.cpp
src/models/: LlamaModel.cpp  MistralModel.cpp  Model.cpp  ModelBase.cpp  Qwen2_5Model.cpp  Qwen3Model.cpp  QwenModel.cpp
src/services/openAI/: OpenAIService.cpp  OpenAIService.h
src/tokenizer/: LlamaTokenizer.cpp  MistralTokenizer.cpp  QwenTokenizer.cpp  Tokenizer.cpp  TokenizerBase.cpp
tests/: clean_response_english.py  clean_response_unicode.py  edge_cases.py  endurance_test.py  large_context.py  load_test.py  multi_turn_chat_llama.py  multi_turn_chat_mistral.py  test1.py
